@@ -3,18 +3,28 @@ ENV["RAILS_ENV"] ||= "cucumber"
 require File.expand_path(File.dirname(__FILE__) + '/../../config/environment')
 require 'cucumber/rails/world'
 
-# Whether or not to run each scenario within a database transaction.
+# If you set this to true, each scenario will run in a database transaction.
+# You can still turn off transactions on a per-scenario basis, simply tagging 
+# a feature or scenario with the @no-txn tag. 
 #
-# If you leave this to true, you can turn off traqnsactions on a
-# per-scenario basis, simply tagging it with @no-txn
+# If you set this to false, transactions will be off for all scenarios,
+# regardless of whether you use @no-txn or not.
+#
+# Beware that turning transactions off will leave data in your database 
+# after each scenario, which can lead to hard-to-debug failures in 
+# subsequent scenarios. If you do this, we recommend you create a Before
+# block that will explicitly put your database in a known state.
 Cucumber::Rails::World.use_transactional_fixtures = true
 
-# Whether or not to allow Rails to rescue errors and render them on
-# an error page. Default is false, which will cause an error to be
-# raised.
+# If you set this to false, any error raised from within your app will bubble 
+# up to your step definition and out to cucumber unless you catch it somewhere
+# on the way. You can make Rails rescue errors and render error pages on a
+# per-scenario basis by tagging a scenario or feature with the @allow-rescue tag.
 #
-# If you leave this to false, you can turn on Rails rescuing on a
-# per-scenario basis, simply tagging it with @allow-rescue
+# If you set this to true, Rails will rescue all errors and render error
+# pages, more or less in the same way your application would behave in the
+# default production environment. It's not recommended to do this for all
+# of your scenarions, as this makes it hard to discover errors in your application.
 ActionController::Base.allow_rescue = false
 
 # Comment out the next line if you don't want Cucumber Unicode support
@@ -27,8 +37,6 @@ Webrat.configure do |config|
   config.mode = :rails
   config.open_error_files = false # Set to true if you want error pages to pop up in the browser
 end
-<% if framework == :rspec -%>
 
 require 'cucumber/rails/rspec'
 require 'webrat/core/matchers'
-<% end -%>
